--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <img src="/img/placeholder-logo.png">
             <ul class="Nav-item">
                 <li><a class="item" href ="#">Industries</a>
-                <ul>
+                <ul style="display: none;">
                     <li ><a class="dropDown" href ="#">Financial Service</a></li>
                     <li ><a class="dropDown" href ="#">Healthcare</a></li>
                     <li ><a class="dropDown" href ="#">Goverment</a></li>
@@ -26,5 +26,15 @@
                 </ul>
             </ul>
         </nav>
+
+        <div id="Industies">
+            
+                    <h2 class="dropDown"><a  href ="#" ><span>&#8594;</span> Financial Service</a></h2>
+                    <hr>
+                    <h2 class="dropDown"><a href ="#" ><span>&#8594;</span> Healthcare</a></h2>
+                    <hr>
+                    <h2 class="dropDown"><a href ="#" ><span>&#8594;</span> Goverment</a></h2>
+                
+        </div>
     </body>
 </html>
