3 line in the navbar

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                 <div id="search">
                     <a href ="#" ><i onclick="myFunction()" style="color: white;" class="fa fa-search"></i></a>
                 </div>
+                <div id="three">
+                    <i class="fa fa-bars"></i>
+                </div>
 
                 <button id="demo">Request A Demo</button>
         </nav>
